Node.js課題④-1 質問用3

--- a/keijiban/package.json
+++ b/keijiban/package.json
@@ -27,6 +27,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
